<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hungowallpaper"
    android:textAlignment="center"
    tools:context=".mainpageFragment">


    <TextView
        android:id="@+id/textwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="128dp"
        android:gravity="center"
        android:text="@string/welcomes_you_to"
        android:textColor="#E9B26E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="255dp"
        android:layout_height="107dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/hungologo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/DonateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="#657046"
        android:text="@string/donate_food"
        android:textColor="#FFECB3"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textwelcome" />

    <Button
        android:id="@+id/ReceiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="#657046"
        android:text="@string/receive_food"
        android:textColor="#FFECB3"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DonateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>