<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupFragment"
    android:background="@drawable/hungowallpaper">

    <TextView
        android:id="@+id/SignUP"
        android:layout_width="261dp"
        android:layout_height="77dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="#ECE2CC"
        android:textSize="50sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/NameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/name"
        android:textColor="#E9B26E"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUP"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/UsernameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/username"
        android:textStyle="italic"
        android:textColor="#E9B26E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameBtn"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/EmailAddressBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email"
        android:textColor="#E9B26E"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameBtn"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/PasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/password"
        android:textStyle="italic"
        android:textColor="#E9B26E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressBtn"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:text="Submit"
        android:backgroundTint="#657046"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBtn"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>